Class improvement & removed duplicates variables